--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,33 @@ authors = ["Syfaro <syfaro@huefox.com>"]
 aamva = { git = "https://github.com/Syfaro/aamva-rs", version = "0.1.0" }
 async-hid = "0.1.0"
 async-trait = "0.1.81"
-async-tungstenite = { version = "0.26.2", features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
+async-tungstenite = { version = "0.26.2", features = [
+    "tokio-runtime",
+    "tokio-rustls-webpki-roots",
+] }
+base64 = "0.22.1"
 eyre = "0.6.12"
+flate2 = "1.0.30"
 futures = "0.3.30"
 hex = "0.4.3"
 ipp = { version = "5.0.3", default-features = false, features = [
     "async",
     "async-client",
 ] }
+jsonwebtoken = "9.3.0"
 open = "5.3.0"
-reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json", "stream"] }
+reqwest = { version = "0.12.5", default-features = false, features = [
+    "rustls-tls",
+    "json",
+    "stream",
+] }
 rhai = { version = "1.19.0", features = ["serde", "sync"] }
 rumqttc = { version = "0.24.0", features = ["url"] }
 serde = { version = "1.0.204", features = ["derive", "rc"] }
 serde_json = "1.0.120"
+serde_with = "3.8.3"
 tap = "1.0.1"
+time = { version = "0.3.36", features = ["macros", "parsing"] }
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
 tokio-serial = "5.4.4"
 tokio-util = "0.7.11"
