--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ ipp = { version = "5.0.3", default-features = false, features = [
 ] }
 jsonwebtoken = "9.3.0"
 open = "5.3.0"
+regex = "1.10.5"
 reqwest = { version = "0.12.5", default-features = false, features = [
     "rustls-tls",
     "json",
@@ -33,6 +34,7 @@ rumqttc = { version = "0.24.0", features = ["url"] }
 serde = { version = "1.0.204", features = ["derive", "rc"] }
 serde_json = "1.0.120"
 serde_with = "3.8.3"
+smol_str = { version = "0.2.2", features = ["serde"] }
 tap = "1.0.1"
 time = { version = "0.3.36", features = ["macros", "parsing"] }
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
