--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ reqwest = { version = "0.12.5", default-features = false, features = [
     "stream",
 ] }
 rhai = { version = "1.19.0", features = ["serde", "sync"] }
-rumqttc = { version = "0.24.0", features = ["url"] }
+rumqttc = { version = "0.24.0", features = ["url", "websocket"] }
 serde = { version = "1.0.204", features = ["derive", "rc"] }
 serde_json = "1.0.120"
 serde_with = "3.8.3"
