--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Syfaro <syfaro@huefox.com>"]
 aamva = { git = "https://github.com/Syfaro/aamva-rs", version = "0.1.0" }
 async-hid = "0.1.0"
 async-trait = "0.1.81"
-async-tungstenite = { version = "0.26.2", features = [
+async-tungstenite = { version = "0.28.2", features = [
     "tokio-runtime",
     "tokio-rustls-webpki-roots",
 ] }
@@ -17,27 +17,27 @@ eyre = "0.6.12"
 flate2 = "1.0.30"
 futures = "0.3.30"
 hex = "0.4.3"
-ipp = { version = "5.0.3", default-features = false, features = [
+ipp = { version = "5.2.0", default-features = false, features = [
     "async",
     "async-client",
 ] }
 jsonwebtoken = "9.3.0"
 open = "5.3.0"
-regex = "1.10.5"
+regex = "1.11.1"
 reqwest = { version = "0.12.5", default-features = false, features = [
     "rustls-tls",
     "json",
     "stream",
 ] }
-rhai = { version = "1.19.0", features = ["serde", "sync"] }
+rhai = { version = "1.21.0", features = ["serde", "sync"] }
 rumqttc = { version = "0.24.0", features = ["url", "websocket"] }
 serde = { version = "1.0.204", features = ["derive", "rc"] }
 serde_json = "1.0.120"
-serde_with = "3.8.3"
-smol_str = { version = "0.2.2", features = ["serde"] }
+serde_with = "3.12.0"
+smol_str = { version = "0.3.2", features = ["serde"] }
 tap = "1.0.1"
-time = { version = "0.3.36", features = ["macros", "parsing"] }
-tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
+time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-serial = "5.4.4"
 tokio-util = "0.7.11"
 toml = "0.8.14"
