--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - run: sudo apt install libdbus-1-dev pkg-config
       - run: rustup target add x86_64-unknown-linux-musl
       - run: rustup toolchain install stable --profile minimal
       - run: |
