--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,19 @@ async-tungstenite = { version = "0.28.2", features = [
     "tokio-runtime",
     "tokio-rustls-webpki-roots",
 ] }
+axum = { version = "0.8.1", default-features = false, features = ["http1", "tracing", "tokio"] }
 base64 = "0.22.1"
+btleplug = "0.11.7"
 eyre = "0.6.12"
 flate2 = "1.0.30"
 futures = "0.3.30"
 hex = "0.4.3"
+hex-literal = "0.4.1"
+image = { version = "0.25.5", default-features = false }
+infer = "0.19.0"
 ipp = { version = "5.2.0", default-features = false, features = ["async", "async-client", "serde"] }
+isomdl = { git = "https://github.com/spruceid/isomdl.git", version = "0.1.0" }
+jpeg2k = { version = "0.9.1", features = ["image"] }
 jsonwebtoken = "9.3.0"
 open = "5.3.0"
 regex = "1.11.1"
@@ -36,6 +43,7 @@ rumqttc = { version = "0.24.0", features = ["url", "websocket"] }
 serde = { version = "1.0.204", features = ["derive", "rc"] }
 serde_json = "1.0.120"
 serde_with = "3.12.0"
+sha2 = "0.10.8"
 smol_str = { version = "0.3.2", features = ["serde"] }
 tap = "1.0.1"
 time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
@@ -46,3 +54,4 @@ toml = "0.8.14"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.2"
+uuid = "1.13.1"
