--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,6 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.2"
 uuid = "1.13.1"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+dbus = { version = "0.9.7", features = ["vendored"] }
