--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ allow-branch = ["main"]
 sign-tag = true
 
 [features]
-vendored = ["mdl-verifier/vendored"]
+vendored = ["nfc1/vendored", "nfc1/drivers", "nfc1/default_drivers", "dbus/vendored"]
 
 [dependencies]
-aamva = { git = "https://github.com/Syfaro/aamva-rs", version = "0.1.0" }
+aamva = { git = "https://github.com/Syfaro/aamva-rs.git", version = "0.1.0" }
 async-hid = "0.1.0"
 async-trait = "0.1.81"
 axum = { version = "0.8.1", default-features = false, features = ["http1", "tracing", "tokio"] }
@@ -29,6 +29,7 @@ isomdl = { git = "https://github.com/Syfaro/isomdl.git", branch = "handover-impr
 jpeg2k = { version = "0.9.1", features = ["image"] }
 jsonwebtoken = "9.3.0"
 mdl-verifier = { git = "https://github.com/Syfaro/mdl-verifier.git" }
+nfc1 = { version = "0.5.2", default-features = false }
 open = "5.3.0"
 rand = "0.9.0"
 regex = "1.11.1"
@@ -54,3 +55,6 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.2"
 uuid = "1.14.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+dbus = { version = "0.9.7", optional = true }
