--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ vendored = ["nfc1/vendored", "nfc1/drivers", "nfc1/default_drivers", "dbus/vendo
 
 [dependencies]
 aamva = { git = "https://github.com/Syfaro/aamva-rs.git", version = "0.1.0" }
-async-hid = "0.1.0"
+async-hid = "0.2.0"
 async-trait = "0.1.81"
 axum = { version = "0.8.1", default-features = false, features = ["http1", "tracing", "tokio"] }
 base64 = "0.22.1"
@@ -28,9 +28,9 @@ ipp = { version = "5.2.0", default-features = false, features = ["async", "async
 isomdl = { git = "https://github.com/Syfaro/isomdl.git", branch = "handover-improvements", version = "0.1.0" }
 jpeg2k = { version = "0.9.1", features = ["image"] }
 jsonwebtoken = "9.3.0"
-mdl-verifier = { git = "https://github.com/Syfaro/mdl-verifier.git" }
 nfc1 = { version = "0.5.2", default-features = false }
 open = "5.3.0"
+postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
 rand = "0.9.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.5", default-features = false, features = [
@@ -54,7 +54,7 @@ toml = "0.8.14"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url = "2.5.2"
-uuid = "1.14.0"
+uuid = "1.15.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 dbus = { version = "0.9.7", optional = true }
