--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ ipp = { version = "5.2.0", default-features = false, features = ["async", "async
 isomdl = { git = "https://github.com/Syfaro/isomdl.git", branch = "handover-improvements", version = "0.1.0" }
 jpeg2k = { version = "0.9.1", features = ["image"] }
 jsonwebtoken = "9.3.0"
+mrtd = { version = "0.5.2", features = ["serde"] }
 nfc1 = { version = "0.5.2", default-features = false }
 open = "5.3.0"
 postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
