--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ serde_json = "1.0.139"
 serde_with = "3.12.0"
 sha2 = "0.10.8"
 tap = "1.0.1"
-time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
+time = { version = "0.3.36", features = ["macros", "parsing", "serde", "serde-human-readable"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-serial = "5.4.4"
 tokio-stream = "0.1.17"
