Clean up dependencies.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,10 @@ jobs:
             runs-on: ubuntu-24.04
             target: aarch64-unknown-linux-musl
 
+          - os-name: Windows-x86_64
+            runs-on: windows-2022
+            target: x86_64-pc-windows-gnu
+
           - os-name: macOS-aarch64
             runs-on: macos-14
             target: aarch64-apple-darwin
@@ -37,7 +41,7 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           command: build
-          args: "--locked --release --features vendored"
+          args: "--locked --release"
           force-use-cross: true
       - name: Publish artifacts and release
         uses: houseabsolute/actions-rust-release@v0
